--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -1,7 +1,11 @@
-dummy_addon_help = <Kurze AddOn Beschreibung für die AddOn-Verwaltung von REDAXO.>
+dummy_addon_help = 
+
+dummy_start = Start
 dummy_settings = Einstellungen
 dummy_setup = Setup
 dummy_help = Hilfe
+
+dummy_start_title = Dummy für REDAXO
 
 dummy_help_chapter_readme = Readme
 dummy_help_chapter_changelog = Changelog
