--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -6,6 +6,8 @@ dummy_setup = Setup
 dummy_help = Hilfe
 
 dummy_start_title = Dummy für REDAXO
+dummy_start_example_link_internal = Interner Beispiellink
+dummy_start_example_link_external = Externer Beispiellink
 
 dummy_help_chapter_readme = Readme
 dummy_help_chapter_changelog = Changelog
